# tech-challgend-fiap

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: SDD.md  deploy_architecture.md  guia_de_estudos.md  ml_canvas.md  model_card.md
notebooks/: 01_eda_e_baselines.ipynb  01_eda_e_baselines.py
src/: train.py
src/api/: main.py  schemas.py
src/api/controllers/: prediction_controller.py
src/api/services/: inference_service.py
src/training/: data_processor.py  run.py  trainer.py
tests/: test_api.py  test_schema.py
