[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "telco_churn"
version = "0.1.0"
description = "Tech Challenge Fase 01 - Churn Prediction"
readme = "README.md"
authors = [{ name = "Diego" }]
license = { text = "MIT" }
requires-python = ">=3.9"

# DEPENDÊNCIAS CORE (Estritamente o que vai pro container de API/Produção)
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "joblib>=1.3.0"
]

[project.optional-dependencies]
# Dependências exclusivas do Pipeline de Treinamento
train = [
    "mlflow>=2.5.0",
    "openpyxl>=3.1.0"
]

# Dependências exclusivas para cadernos Jupyter e Análises Exploratórias
eda = [
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "xgboost>=2.0.0",
    "kagglehub>=0.2.0"
]

# Dependências de Qualidade e CI/CD
dev = [
    "pytest>=7.4.0",
    "httpx>=0.24.0",
    "ruff>=0.1.0",
    "pandera>=0.16.0"
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
